--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -78,15 +78,16 @@ html:
           data-tooltip="领英联系我: xinet" data-position="top" data-delay="50">
           <i class="fab fa-linkedin"></i>
       </a>
-      <div><a href="https://github.com/xinetzone/mini-book">Jupyter Book</a> 版权所有</div>
+      <div><a href="https://github.com/xinetzone/mathematical-analysis">Mathematical Analysis</a> 版权所有</div>
     </div> 
   extra_footer: "" # Will be displayed underneath the footer.
   google_analytics_id: "" # A GA id that can be used to track book views.
-  home_page_in_navbar: flase # Whether to include your home page in the left Navigation Bar
+  home_page_in_navbar: false # Whether to include your home page in the left Navigation Bar
   baseurl: "" # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
   comments:
-    hypothesis: false
-    utterances: false
+    hypothesis: true
+    utterances:
+      repo: "xinetzone/mathematical-analysis"
 
 #######################################################################################
 # LaTeX-specific settings
@@ -106,7 +107,7 @@ launch_buttons:
   colab_url: "" # The URL of Google Colab (https://colab.research.google.com)
 
 repository:
-  url: https://github.com/xinetzone/mini-book # The URL to your book's repository
+  url: https://github.com/xinetzone/mathematical-analysis # The URL to your book's repository
   path_to_book: "docs" # A path to your book's folder, relative to the repository root.
   branch: main # Which branch of the repository should be used when creating links
 
