--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -10,6 +10,8 @@ sphinx_inline_tabs
 # sphinx-click
 # sphinx_inline_tabs
 # sphinxext-rediraffe
-# sympy
+sympy
 # jupyter-dash
 plotly
+pydot
+graphviz
