--- a/.github/workflows/book-deploy.yml
+++ b/.github/workflows/book-deploy.yml
@@ -40,6 +40,7 @@ jobs:
         pip install -r etc/requirements.txt
         conda install ipykernel
         python -m ipykernel install --user --name ai --display-name "ai"
+        sudo apt-get install graphviz
     - name: Install theme
       run: |
         git clone https://github.com/xinetzone/xin-css.git docs/_static/xin-css
