--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -110,14 +110,56 @@ repository:
   path_to_book: "docs" # A path to your book's folder, relative to the repository root.
   branch: main # Which branch of the repository should be used when creating links
 
-#######################################################################################
-# Advanced and power-user settings
-sphinx:
-  extra_extensions: # A list of extra extensions to load by Sphinx (added to those already used by JB).
-  local_extensions: # A list of local extensions to load by sphinx specified by "name: path" items
-  config: # key-value pairs to directly over-ride the Sphinx configuration
-    language: zh # https://www.w3schools.com/tags/ref_language_codes.asp
-
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
   - references.bib
+
+#######################################################################################
+# Advanced and power-user settings
+sphinx:
+  local_extensions: # A list of local extensions to load by sphinx specified by "name: path" items
+  config: 
+    html_js_files:
+      - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
+    language: zh # https://www.w3schools.com/tags/ref_language_codes.asp
+    intersphinx_mapping:
+      wiki:
+        - "https://xinetzone.github.io/wiki/"
+        - null
+      # mini-book:
+      #   - "https://xinetzone.github.io/mini-book/"
+      #   - null
+      # plotly-book:
+      #   - "https://xinetzone.github.io/plotly-book/"
+      #   - null
+      # sympy-book:
+      #   - "https://xinetzone.github.io/sympy-book/"
+      #   - null
+      # jupyter-book:
+      #   - "https://xinetzone.github.io/jupyter-book/"
+      #   - null
+      # pytorch-book:
+      #   - "https://xinetzone.github.io/pytorch-book/"
+      #   - null
+      # tensorflow-book:
+      #   - "https://xinetzone.github.io/tensorflow-book/"
+      #   - null
+      # life:
+      #   - "https://xinetzone.github.io/life/"
+      #   - null
+      # ai-world:
+      #   - "https://xinetzone.github.io/ai-world/"
+      #   - null
+      # mathematics:
+      #   - "https://xinetzone.github.io/mathematics/"
+      #   - null
+      # linear-algebra:
+      #   - "https://xinetzone.github.io/linear-algebra/"
+      #   - null
+      # matrix-theory:
+      #   - "https://xinetzone.github.io/matrix-theory/"
+      #   - null
+  extra_extensions:
+    - sphinx_click.ext
+    - sphinx_inline_tabs
+    - sphinx.ext.intersphinx
